# MBH-SEG-2025

./: .gitignore  README.md  case-wise_annotation.csv  encoder_training.ipynb  model_inspect.ipynb  nnUNet_overrides.py  pyproject.toml  requirements.txt  submission.py  submit_batch.sh
nnunetv2_local/: configuration.py  paths.py
nnunetv2_local/batch_running/: collect_results_custom_Decathlon.py  collect_results_custom_Decathlon_2d.py  generate_lsf_runs_customDecathlon.py
nnunetv2_local/dataset_conversion/: Dataset027_ACDC.py  Dataset042_BraTS18.py  Dataset043_BraTS19.py  Dataset073_Fluo_C3DH_A549_SIM.py  Dataset114_MNMs.py  Dataset115_EMIDEC.py  Dataset120_RoadSegmentation.py  Dataset137_BraTS21.py  Dataset218_Amos2022_task1.py  Dataset219_Amos2022_task2.py  Dataset220_KiTS2023.py  Dataset221_AutoPETII_2023.py  Dataset223_AMOS2022postChallenge.py  Dataset224_AbdomenAtlas1.0.py  Dataset988_dummyDataset4.py  convert_MSD_dataset.py  convert_raw_dataset_from_old_nnunet_format.py  generate_dataset_json.py
nnunetv2_local/ensembling/: ensemble.py
nnunetv2_local/evaluation/: accumulate_cv_results.py  evaluate_predictions.py  find_best_configuration.py
nnunetv2_local/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
nnunetv2_local/imageio/: base_reader_writer.py  natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  simpleitk_reader_writer.py  tif_reader_writer.py
nnunetv2_local/inference/: JHU_inference.py  data_iterators.py  examples.py  export_prediction.py  (+2 more)
(+121 files in other folders)
